# atom

./: .dockerignore  .gitignore  Dockerfile  Dockerfile   README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
atom/: alembic.ini  docker-compose.yaml  main.py  test.db
atom/alembic/: env.py
atom/alembic/versions/: 00c87c1677cd_refactor_names.py  090e6b6a7923_creating_a_new_id_for_user_and_todos.py  3b607f1d9913_change_id_column.py  46b1234abf67_create_tables.py  4fdc22f903fb_create_tables.py  6206487427d3_change_id_column_and_delete_password.py  7417eeea8eff_create_todos.py  7cb74c59d0b5_change_names_for_unique_id.py  c42fd026ad65_add_cascade_delete.py  cc020528ee19_creating_a_new_id_for_user_and_todos.py
atom/core/: config.py  hashing.py
atom/crud/: todo_crud.py  user_crud.py
atom/models/: database.py  todo_model.py  user_model.py
atom/routers/: base.py  todo_routes.py  user_routes.py
atom/schemas/: todo_schema.py  user_schema.py
atom/tests/: .env  conftest.py  test.db  test_config.py  test_todo_routers.py  test_user_routers.py
tests/: test_config.py  test_user_routers.py
